feat:新增文章内容外键表

--- a/python/django_learning/text_editor/templates/article.html
+++ b/python/django_learning/text_editor/templates/article.html
@@ -5,6 +5,8 @@
     <form id="releaseForm" role="form" enctype="multipart/form-data">
         {{ form.media }}
         {{ form.as_p }}
+        {{ content_form.media }}
+        {{ content_form.as_p }}
         <button class="btn btn-success" type="submit" style="border: forestgreen 2px solid;"><span class="glyphicon glyphicon-send"></span>点击发布</button>
     </form>
     <div id = "mainContent">
