--- a/python/django_learning/text_editor/templates/article_item.html
+++ b/python/django_learning/text_editor/templates/article_item.html
@@ -9,5 +9,7 @@
     <form>
         {{ form.media }}
         {{ form.as_p }}
+        {{ content_form.media }}
+        {{ content_form.as_p }}
     </form>
 </div>
